k8s/stock-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-client
  template:
    metadata:
      labels:
        app: stock-client
    spec:
      serviceAccountName: stock-service-account
      containers:
        - name: stock-client
          image: stock-client:1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: stock-client-service
spec:
  type: NodePort
  ports:
    - nodePort: 31280
      port: 8080
      targetPort: 8080
  selector:
    app: stock-client
